<resources>
    <string name="app_name">Lista Produtos</string>
    <string name="TituloLogin">BEM VINDO</string>
    <string name="ManterLogin">Manter conectado</string>
    <string name="LembraSenha">Esqueceu a senha ?</string>
    <string name="BotaoLogar">Entrar</string>
    <string name="Username" >Username</string>
    <string name="username">Username</string>
    <string name="Lorem">Lorem ipsum</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="toolbarTitulo">Notificações</string>
    <string name="Cadastro">Cadastrar</string>
</resources>