<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_login"
    android:backgroundTint="@color/Background_Login">

    <TextView
        android:id="@+id/textTitulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="84dp"
        android:text="@string/TituloLogin"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/textUsuario"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/background_text"
        android:ems="10"
        android:hint="@string/Username"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textTitulo" />

    <EditText
        android:id="@+id/textSenha"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/background_text"
        android:ems="10"
        android:hint="Password"
        android:inputType="textPersonName|textWebPassword"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textUsuario" />

    <CheckBox
        android:id="@+id/checkBoxConectado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/ManterLogin"
        android:textColor="@color/material_on_background_emphasis_high_type"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/textSenha"
        app:layout_constraintTop_toBottomOf="@+id/textSenha" />

    <TextView
        android:id="@+id/textEsqueceuSenha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/LembraSenha"
        android:textColor="@color/material_on_background_emphasis_high_type"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/textSenha"
        app:layout_constraintTop_toBottomOf="@+id/textSenha" />

    <Button
        android:id="@+id/buttonEntrar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:backgroundTint="@color/teal_200"
        android:backgroundTintMode="add"
        android:hapticFeedbackEnabled="false"
        android:text="@string/BotaoLogar"
        android:textColor="#FFFFFF"
        app:iconTint="#FFFFFF"
        app:iconTintMode="src_over"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkBoxConectado" />

    <Button
        android:id="@+id/buttonEntrar3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="32dp"
        android:backgroundTint="@color/teal_200"
        android:backgroundTintMode="add"
        android:hapticFeedbackEnabled="false"
        android:text="@string/Cadastro"
        android:textColor="#FFFFFF"
        app:iconTint="#FFFFFF"
        app:iconTintMode="src_over"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.473"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <View
        android:id="@+id/divider2"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="9dp"
        android:layout_marginEnd="16dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintEnd_toStartOf="@+id/textView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="Ou"
        app:layout_constraintEnd_toStartOf="@+id/divider3"
        app:layout_constraintStart_toEndOf="@+id/divider2"
        app:layout_constraintTop_toBottomOf="@+id/buttonEntrar" />

    <View
        android:id="@+id/divider3"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="9dp"
        android:layout_marginEnd="8dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView"
        app:layout_constraintTop_toTopOf="@+id/textView" />

</androidx.constraintlayout.widget.ConstraintLayout>